--- a/itemsharing/itemsharing.userservice/src/main/resources/application.yml
+++ b/itemsharing/itemsharing.userservice/src/main/resources/application.yml
@@ -10,3 +10,5 @@ spring:
     password: "mysql"
     testWhileIdle: "true"
     validationQuery: "SELECT 1"
+    
+security:  basic:    enabled: false
