add item service

--- a/itemsharing/pom.xml
+++ b/itemsharing/pom.xml
@@ -23,6 +23,7 @@
 		<module>userservice</module>
 		<module>itemservice</module>
 		<module>itemsharing.userservice</module>
+		<module>itemsharing.itemservice</module>
 	</modules>
 
 	<dependencies>
