add config server

--- a/itemsharing/itemsharing.configserver/pom.xml
+++ b/itemsharing/itemsharing.configserver/pom.xml
@@ -7,10 +7,10 @@
 		<artifactId>itemsharing</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.itemsharing.itemservice</groupId>
-	<artifactId>itemsharing.itemservice</artifactId>
-	<name>itemservice</name>
-	<description>item service for item sharing app</description>
+	<groupId>com.itemsharing.configserver</groupId>
+	<artifactId>itemsharing.configserver</artifactId>
+	<name>configserver</name>
+	<description>config server for item sharing app</description>
 
 	<dependencyManagement>
 		<dependencies>
@@ -31,28 +31,13 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-security</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-client</artifactId>
+			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
 
 		<dependency>
