--- a/itemsharing/pom.xml
+++ b/itemsharing/pom.xml
@@ -24,6 +24,7 @@
 		<module>itemservice</module>
 		<module>itemsharing.userservice</module>
 		<module>itemsharing.itemservice</module>
+		<module>itemsharing.configserver</module>
 	</modules>
 
 	<dependencies>
