--- a/itemsharing/itemsharing.eurekaserver/pom.xml
+++ b/itemsharing/itemsharing.eurekaserver/pom.xml
@@ -7,11 +7,11 @@
 		<artifactId>itemsharing</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.itemsharing.userservice</groupId>
-	<artifactId>itemsharing.userservice</artifactId>
+	<groupId>com.itemsharing.eurekaserver</groupId>
+	<artifactId>itemsharing.eurekaserver</artifactId>
 	<packaging>jar</packaging>
-	<name>userservice</name>
-	<description>userservice for item sharing app</description>
+	<name>eurekaserver</name>
+	<description>eureka service for itemsharing app</description>
 
 	<dependencyManagement>
 		<dependencies>
@@ -32,33 +32,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-security</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-client</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-eureka</artifactId>
+			<artifactId>spring-cloud-starter-eureka-server</artifactId>
 		</dependency>
 
 		<dependency>
