add hystrix concurrency strategy

--- a/itemsharing/itemsharing.itemservice/src/main/resources/application.yml
+++ b/itemsharing/itemsharing.itemservice/src/main/resources/application.yml
@@ -14,3 +14,7 @@
 #security:#  basic:#    enabled: false
 #    
 #server:#  port: 8082
+
+logging:  level:    com.netflix: WARN
+    org.springframework.web: WARN
+    com.itemsharing: DEBUG
