--- a/itemsharing/itemsharing.userservice/src/main/resources/application.yml
+++ b/itemsharing/itemsharing.userservice/src/main/resources/application.yml
@@ -19,4 +19,10 @@
 security:  oauth2:    resource:      user-info-uri: http://localhost:8901/user
       
 signing:
-  key: 345345fsdgsf5345 
+  key: 345345fsdgsf5345
+  
+logging:
+  level:
+    com.netflix: WARN
+    org.springframework.web: WARN
+    com.itemsharing: DEBUG
