--- a/itemsharing/itemsharing.itemservice/pom.xml
+++ b/itemsharing/itemsharing.itemservice/pom.xml
@@ -75,6 +75,11 @@
 			<artifactId>hystrix-javanica</artifactId>
 			<version>1.5.9</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
