--- a/itemsharing/itemsharing.userservice/pom.xml
+++ b/itemsharing/itemsharing.userservice/pom.xml
@@ -72,6 +72,11 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.7.0</version>
