add zipkin server

--- a/itemsharing/itemsharing.itemservice/src/main/resources/application.yml
+++ b/itemsharing/itemsharing.itemservice/src/main/resources/application.yml
@@ -18,3 +18,8 @@
 logging:  level:    com.netflix: WARN
     org.springframework.web: WARN
     com.itemsharing: DEBUG
+    
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://localhost:8901/user
