--- a/itemsharing/itemsharing.zuulserver/src/main/resources/bootstrap.yml
+++ b/itemsharing/itemsharing.zuulserver/src/main/resources/bootstrap.yml
@@ -1,4 +1,5 @@
 spring:
   application:
     name: zuulservice
-  profiles:    active: default  cloud:    config:      uri: http://localhost:8888
+  profiles:    active: default
+  zipkin:    base-url: http://localhost:9411  cloud:    config:      uri: http://localhost:8888
