--- a/itemsharing/pom.xml
+++ b/itemsharing/pom.xml
@@ -28,6 +28,7 @@
 		<module>itemsharing.eurekaserver</module>
 		<module>itemsharing.zuulserver</module>
 		<module>itemsharing.authorizationserver</module>
+		<module>itemsharing.zipkinserver</module>
 	</modules>
 
 	<dependencies>
