add actuator, enable eureka, move config to git

--- a/itemsharing/itemsharing.configserver/src/main/resources/application.yml
+++ b/itemsharing/itemsharing.configserver/src/main/resources/application.yml
@@ -2,5 +2,5 @@ server:
   port: 8888
 
 spring:  cloud:    config:      server:        git:          uri: https://github.com/yurykiryla/learn-microservices-with-spring-boot-and-spring-cloud_config
-          search-paths: userservice, itemservice
+          search-paths: userservice, itemservice,authorizationservice,eurekaservice,zipkinservice,zuulservice
         encrypt:          enabled: false
