--- a/itemsharing/itemsharing.userservice/src/main/resources/application.yml
+++ b/itemsharing/itemsharing.userservice/src/main/resources/application.yml
@@ -16,13 +16,13 @@
 #server:
 #  port: 8081
 
-security:  oauth2:    resource:      user-info-uri: http://localhost:8901/user
-      
-signing:
-  key: 345345fsdgsf5345
-  
-logging:
-  level:
-    com.netflix: WARN
-    org.springframework.web: WARN
-    com.itemsharing: DEBUG
+#security:#  oauth2:#    resource:#      user-info-uri: http://localhost:8901/user
+#      
+#signing:
+#  key: 345345fsdgsf5345
+#  
+#logging:
+#  level:
+#    com.netflix: WARN
+#    org.springframework.web: WARN
+#    com.itemsharing: DEBUG
