--- a/itemsharing/itemsharing.itemservice/src/main/resources/application.yml
+++ b/itemsharing/itemsharing.itemservice/src/main/resources/application.yml
@@ -15,11 +15,11 @@
 #    
 #server:#  port: 8082
 
-logging:  level:    com.netflix: WARN
-    org.springframework.web: WARN
-    com.itemsharing: DEBUG
-    
-security:
-  oauth2:
-    resource:
-      user-info-uri: http://localhost:8901/user
+#logging:#  level:#    com.netflix: WARN
+#    org.springframework.web: WARN
+#    com.itemsharing: DEBUG
+#    
+#security:
+#  oauth2:
+#    resource:
+#      user-info-uri: http://localhost:8901/user
