--- a/itemsharing/itemsharing.zipkinserver/src/main/resources/application.yml
+++ b/itemsharing/itemsharing.zipkinserver/src/main/resources/application.yml
@@ -1,8 +1,8 @@
-server:
-  port: 9411
-  
-logging:
-  level:
-    com.netflix: WARN
-    org.springframework.web: WARN
-    com.itemsharing: DEBUG
+#server:
+#  port: 9411
+#  
+#logging:
+#  level:
+#    com.netflix: WARN
+#    org.springframework.web: WARN
+#    com.itemsharing: DEBUG
