--- a/itemsharing/itemsharing.zuulserver/src/main/resources/application.yml
+++ b/itemsharing/itemsharing.zuulserver/src/main/resources/application.yml
@@ -1,23 +1,23 @@
-security:
-  basic:
-    enabled: false
-    
-server:
-  port: 5555
-  
-eureka:  instance:    prefer-ip-address: true
-  client:    register-with-eureka: true
-    fetch-registry: true
-    service-url:      defauiltZone: http://localhost:8761/eureka
-      
-zuul:  routes:    userservice: /user/**
-    itemservice: /item/**
-  ignored-services: '*'
-  prefix: /api
-  sensitive-headers: Cookie, Set-Cookie
-  
-logging:
-  level:
-    com.netflix: WARN
-    org.springframework.web: WARN
-    com.itemsharing: DEBUG
+#security:
+#  basic:
+#    enabled: false
+#    
+#server:
+#  port: 5555
+#  
+#eureka:#  instance:#    prefer-ip-address: true
+#  client:#    register-with-eureka: true
+#    fetch-registry: true
+#    service-url:#      defauiltZone: http://localhost:8761/eureka
+#      
+#zuul:#  routes:#    userservice: /user/**
+#    itemservice: /item/**
+#  ignored-services: '*'
+#  prefix: /api
+#  sensitive-headers: Cookie, Set-Cookie
+#  
+#logging:
+#  level:
+#    com.netflix: WARN
+#    org.springframework.web: WARN
+#    com.itemsharing: DEBUG
