--- a/itemsharing/itemsharing.configserver/src/main/resources/application.yml
+++ b/itemsharing/itemsharing.configserver/src/main/resources/application.yml
@@ -4,3 +4,7 @@ server:
 spring:  cloud:    config:      server:        git:          uri: https://github.com/yurykiryla/learn-microservices-with-spring-boot-and-spring-cloud_config
           search-paths: userservice, itemservice,authorizationservice,eurekaservice,zipkinservice,zuulservice
         encrypt:          enabled: false
+          
+management:
+  security:
+    enabled: false
