--- a/itemsharing/itemsharing.eurekaserver/src/main/resources/application.yml
+++ b/itemsharing/itemsharing.eurekaserver/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-#server:
-#  port: 8761
-#  
-#eureka:#  client:#    register-with-eureka: false
-#    fetch-registry: false
-#  server:#    wait-time-in-ms-when-sync-empty: 5
+server:
+  port: 8761
+  
+eureka:  client:    register-with-eureka: false
+    fetch-registry: false
+  server:    wait-time-in-ms-when-sync-empty: 5
