--- a/itemsharing/itemsharing.userservice/src/main/resources/bootstrap.yml
+++ b/itemsharing/itemsharing.userservice/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ spring:
     name: userservice
   profiles:    active: default
   zipkin:
-    base-url: http://localhost:9411  cloud:    config:      uri: http://localhost:8888
+    base-url: http://18.220.211.153:9411  cloud:    config:      uri: http://18.220.211.153:8888
