--- a/itemsharing/itemsharing.zipkinserver/src/main/resources/bootstrap.yml
+++ b/itemsharing/itemsharing.zipkinserver/src/main/resources/bootstrap.yml
@@ -1,6 +1,4 @@
 spring:
   application:
     name: zipkinservice
-  profiles:    active: default
-  zipkin:
-    base-url: http://localhost:9411  cloud:    config:      uri: http://localhost:8888
+  profiles:    active: default  cloud:    config:      uri: http://18.220.211.153:8888
