--- a/itemsharing/itemsharing.zuulserver/pom.xml
+++ b/itemsharing/itemsharing.zuulserver/pom.xml
@@ -8,9 +8,18 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>com.itemsharing.zuulserver</groupId>
+	<packaging>jar</packaging>
 	<artifactId>itemsharing.zuulserver</artifactId>
 	<name>zuulserver</name>
-	<description>zuulserver for itemsharing app</description>
+	<description>zuul server for item sharing app</description>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
+		<start-class>com.itemsharing.zuulserver.ZuulserverApplication</start-class>
+		<docker.image.name>zuulservice</docker.image.name>
+		<docker.image.tag>latest</docker.image.tag>
+	</properties>
 
 	<dependencyManagement>
 		<dependencies>
@@ -80,6 +89,43 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/target/dockerfile</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/main/docker</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.4.10</version>
+				<configuration>
+					<imageName>${docker.image.name}:${docker.image.tag}</imageName>
+					<dockerDirectory>${basedir}/target/dockerfile</dockerDirectory>
+					<resources>
+						<resource>
+							<targetPath>/</targetPath>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}.jar</include>
+						</resource>
+					</resources>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
