--- a/itemsharing/itemsharing.zuulserver/src/main/resources/bootstrap.yml
+++ b/itemsharing/itemsharing.zuulserver/src/main/resources/bootstrap.yml
@@ -2,4 +2,4 @@ spring:
   application:
     name: zuulservice
   profiles:    active: default
-  zipkin:    base-url: http://localhost:9411  cloud:    config:      uri: http://localhost:8888
+  zipkin:    base-url: http://18.220.211.153:9411  cloud:    config:      uri: http://18.220.211.153:8888
